<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    tools:context=".SignUpFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/signup_close"
            android:layout_width="24dp"
            android:layout_height="28dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_close_cross"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/red"

            android:src="@drawable/ic_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.135"
            android:contentDescription="@string/todo" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/full_namesignup"
            android:textColor="@color/white"
            android:inputType="textPersonName"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            app:layout_constraintVertical_bias="0.068"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/usernamesignup"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
            app:layout_constraintVertical_bias="0.043"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextTextEmailAddress2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:backgroundTint="@color/white"
            android:hint="@string/email_id"
            android:textColorHint="@color/white"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
            app:layout_constraintVertical_bias="0.031"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextTextPassword2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/passward_minimum_8_characters"
            android:backgroundTint="@color/white"
            android:inputType="textPassword"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2"
            app:layout_constraintVertical_bias="0.043"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextTextPassword3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/confirm_paswrd"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            android:inputType="textPassword"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2"
            app:layout_constraintVertical_bias="0.079"
            android:autofillHints="" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="27dp"
            android:layout_height="21dp"
            android:background="@color/red"
            android:src="@drawable/ic_custom_error_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.957"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPassword3"
            app:layout_constraintTop_toTopOf="@+id/editTextTextPassword3"
            app:layout_constraintVertical_bias="0.052"
            android:contentDescription="@string/todo" />

        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/sign_up"
            android:textSize="15sp"
            android:enabled="false"
            android:textColor="#50ffffff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editTextTextPassword3"
            app:layout_constraintVertical_bias="0.454" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="38dp"
            android:layout_height="26dp"
            android:text="@string/or"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.528"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button4"
            app:layout_constraintVertical_bias="0.432" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginEnd="70dp"
            android:text="@string/already_have_an_account_sign_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/white"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button4"
            app:layout_constraintVertical_bias="0.65" />

        <ProgressBar
            android:id="@+id/signup_progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="51dp"
            android:layout_height="38dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editTextTextPassword3"
            app:layout_constraintVertical_bias="0.464" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    >

</FrameLayout>